<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乐游Online</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lineMenuButtonText">[排队]</string>
    <string name="mapMenuButtonText">[地图]</string>
    <string name="commMenuButtonText">[评价]</string>
    <string name="shareMenuButtonText">[圈子]</string>
    <string name="exitText">退出程序</string>
    <string name="mainPageBackground">#ffe699</string>
    <string name="selectedTabBackground">#ffe699</string>
    <string name="selectedTabTextColor">#969696</string>
    <string name="unselectedTabBackground">#969696</string>
    <string name="unselectedTabTextColor">#ebebeb</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="twoDScanMenuItemText">扫一扫</string>
    <string name="groundSearchMenuItemText">游乐场搜索</string>
    <string name="playgroundIDInputHint">输入关键字搜索游乐场</string>
    <string name="playgroundProjectInputHint">请输入游玩项目</string>
    <string name="u_slide_board">U型滑板</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="last_updated_date">最近更新2014-10-20 早上9:07:45</string>
    
    <string name="lineFragSpin1Prompt">项目筛选</string>
    <string-array name="lineFragSpin1Item">
        <item>全部</item>
        <item>飓风飞椅</item>
        <item>U型滑板</item>
        <item>墨西哥草帽</item>
        <item>碰碰车</item>
        <item>音乐船</item>
    </string-array>
    <string name="lineFragSpin2Prompt">排序规则</string> 
    <string-array name="lineFragSpin2Item">
        <item>等待时间最短</item>
        <item>距离最近</item>
        <item>人气最高</item>
    </string-array>
    
    <string name="no_data">找不到更多信息</string>

</resources>
