<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_orange" >

        <ImageView
            android:id="@+id/listBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/list_icon" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/listBtn"
            android:gravity="center_vertical"
            android:text="niehao"
            android:textColor="@color/text_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/buddyLayout"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
            	android:layout_gravity="right" >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="伙伴"
                    android:textSize="15sp"
                    android:gravity="bottom"
                    android:textColor="@color/text_deep_gray" />
                <TextView
                    android:id="@+id/buddyNum"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="0"
                    android:textSize="17sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="人"
                    android:textSize="15sp"
                    android:gravity="bottom"
                    android:textColor="@color/text_deep_gray" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/bookedLayout"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical" >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="已预约项目"
                    android:textSize="15sp"
                    android:gravity="bottom"
                    android:textColor="@color/text_deep_gray" />
                <TextView
                    android:id="@+id/bookedNum"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="1"
                    android:textSize="17sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="个"
                    android:textSize="15sp"
                    android:gravity="bottom"
                    android:textColor="@color/text_deep_gray" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dp" >
        
        <ImageView 
            android:id="@+id/mapBtn"
            android:layout_height="match_parent"
            android:layout_width="30dp"
            android:src="@drawable/map_navigator_icon"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true" />

        <EditText
            android:id="@+id/attrSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_with_round_corner"
            android:drawablePadding="10dp"
            android:hint="@string/playgroundProjectInputHint"
            android:paddingLeft="8dp"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textSize="15sp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/mapBtn" >
        </EditText>
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone" >

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/lineFragSpin1Item"
            android:prompt="@string/lineFragSpin1Prompt" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/lineFragSpin2Item"
            android:prompt="@string/lineFragSpin2Prompt" />
    </LinearLayout>

    <com.playfun.lineonline.widget.MyListView
        android:id="@+id/attrList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff" />

</LinearLayout>